<resources>
    <string name="app_name">AsaEvidencer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_themes">Change Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>

    <string name="menu_map">Map</string>
    <string name="menu_incidents">Incidents</string>
    <string name="menu_data_sources">Data Sources</string>
    <string name="menu_investigator">Investigator</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="base_url">Base URL:</string>
    <string name="base_url_string">asa-staging.dallmeier.com</string>
    <string name="username_login">Username:</string>
    <string name="user_name_or_email">User name or email</string>
    <string name="password_login">Password:</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="required">Required Field</string>
    <string name="base_url_invalid">Base url is invalid</string>
    <string name="loading">Loading</string>
    <string name="location_service_disabled">Location services disabled</string>
    <string name="location_message">Evidencer needs access to your locationEntity. Please turn on locationEntity access.</string>
    <string name="ignore">Ignore</string>
    <string name="settings">Settings</string>
    <string name="upload_all">UPLOAD ALL</string>
    <string name="no_nearby_incident_available">No Nearby Incident Available</string>
    <string name="zero">0</string>
    <string name="days_ago">days ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="hours_ago_short">h ago</string>
    <string name="days_ago_short">days ago</string>
    <string name="minutes_ago_short">min ago</string>
    <string name="seconds_ago_short">sec ago</string>
    <string name="title_activity_incident_detail_v2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_text_1">Recently</string>
    <string name="tab_text_2">Comment</string>
    <string name="title_activity_incident_detail">MainActivity</string>
    <string name="title_activity_tesst">MainActivity</string>
    <string name="title_activity_main_activityfdfdfd">MainActivity</string>
    <string name="new_image_evidence_added">A Photo Added</string>
    <string name="new_voice_evidence_added">A Voice Record Added</string>
    <string name="new_video_evidence_added">A Video Record Added</string>
    <string name="new_file_evidence_added">A File Added</string>
    <string name="date_create">Date Create</string>
    <string name="create_by">Create By</string>
    <string name="last_modified_date">Last modified date</string>
    <string name="last_modified_by">Last modified by</string>
    <string name="file_size">File size</string>
    <string name="area_code">Area code</string>
    <string name="date_observed">Date_observed</string>
    <string name="error">error</string>
    <string name="officer">Reporting officer</string>
    <string name="type_of_incident">Type of incident</string>
    <string name="type">Type</string>
    <string name="date_time">Date,time</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="critical">Criticality</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="search_place">Search places</string>
    <string name="short_description">Short Description</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="logout">Are you sure you want to logout?</string>
    <string name="tool_bar_galery">Choose images</string>
    <string name="empty">Empty</string>
    <string name="upload">Waiting to upload</string>
    <string name="success_upload">Upload successful</string>
    <string name="waitting">"Waitting "</string>
    <string name="not_found_file">File not found</string>
    <string name="content">Content</string>
    <string name="note">Note</string>
    <string name="by">by</string>
    <string name="success">Success</string>
    <string name="record_audio">Record Audio</string>
    <string name="path_sd">Evidencer</string>
    <string name="new_incident">New Incident</string>
    <string name="search_hint">Search tilte</string>
    <string name="save">Save</string>
    <string name="un_success_upload">Upload unsuccessful. please try again</string>
    <string name="media_detail">Media Detail</string>
    <string name="assignee">Assignee</string>
    <string name="address">Address</string>
    <string name="current_location">Current location</string>
    <string name="pieces">Pieces of evidence</string>
    <string name="invalid_token">invalid token</string>
</resources>