<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map_white"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_incidents"
            android:icon="@drawable/ic_incident_white"
            android:title="@string/menu_incidents" />
        <item
            android:id="@+id/nav_data_source"
            android:icon="@drawable/ic_photo_white"
            android:title="@string/menu_data_sources" />
        <item
            android:id="@+id/nav_investigator"
            android:icon="@drawable/ic_person_white"
            android:title="@string/menu_investigator" />
    </group>
</menu>