<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    startDestination="@+id/nav_home">

    <FrameLayout
        android:id="@+id/nav_home"
        class="com.dallmeier.evidencer.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <FrameLayout
        android:id="@+id/nav_incidents"
        class="com.dallmeier.evidencer.ui.incidents.IncidentsFragment"
        android:label="@string/menu_incidents"
        tools:layout="@layout/fragment_incidents" />

    <FrameLayout
        android:id="@+id/nav_data_source"
        class="com.dallmeier.evidencer.ui.gallery.GalleryFragment"
        android:label="@string/menu_data_sources"
        tools:layout="@layout/fragment_incidents" />
    <FrameLayout
        android:id="@+id/nav_investigator"
        class="com.dallmeier.evidencer.ui.incidents.IncidentsFragment"
        android:label="@string/menu_investigator"
        tools:layout="@layout/fragment_incidents" />
</navigation>