<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grey_outline"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:gravity="left"
        android:padding="@dimen/dimen_10"
        android:text="@string/note"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edt_radius_5"
            android:cursorVisible="false"
            android:gravity="left"
            android:hint="@string/content"
            android:inputType="text"
            android:maxLines="1"
            android:minWidth="@dimen/dimen_400"
            android:minHeight="@dimen/dimen_100"
            android:padding="@dimen/dimen_5"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:imeOptions="flagNoExtractUi" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/dimen_10"
            android:layout_weight="1"
            android:background="@drawable/animate_btn"
            android:gravity="center"
            android:padding="@dimen/dimen_5"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/dimen_10"
            android:layout_weight="1"
            android:background="@drawable/animate_btn"
            android:gravity="center"
            android:padding="@dimen/dimen_5"
            android:text="@string/add"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</LinearLayout>